quick refactor